--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,10 @@
     tools:context=".app.App"
     android:background="@drawable/splash">
     <!--内容-->
-    <LinearLayout
-        android:id="@+id/app_main_ll_content"
+    <RelativeLayout
+        android:id="@+id/app_main_rl_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" />
+        android:layout_height="match_parent" />
     <!--动画父布局-->
     <LinearLayout
         android:id="@+id/app_main_ll_anim_parent"
