--- a/app/src/main/res/layout/activity_select_contacts.xml
+++ b/app/src/main/res/layout/activity_select_contacts.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/x16"
+        android:layout_margin="@dimen/dimen_16_dp"
         android:src="@android:drawable/ic_input_add"
         app:layout_behavior="com.kupay.kupay.widget.FabBehavior" />
 
