--- a/app/src/main/res/layout/item_select_contacts_list.xml
+++ b/app/src/main/res/layout/item_select_contacts_list.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/x60"
-    android:layout_marginBottom="@dimen/x5"
-    android:layout_marginEnd="@dimen/x15"
-    android:layout_marginStart="@dimen/x15"
-    android:layout_marginTop="@dimen/x5">
+    android:layout_height="@dimen/dimen_60_dp"
+    android:layout_marginBottom="@dimen/dimen_5_dp"
+    android:layout_marginEnd="@dimen/dimen_15_dp"
+    android:layout_marginStart="@dimen/dimen_15_dp"
+    android:layout_marginTop="@dimen/dimen_5_dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,13 +17,13 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="@dimen/x5" />
+            android:layout_marginEnd="@dimen/dimen_5_dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginEnd="@dimen/x10"
-            android:layout_marginStart="@dimen/x10"
+            android:layout_marginEnd="@dimen/dimen_10_dp"
+            android:layout_marginStart="@dimen/dimen_10_dp"
             android:layout_toStartOf="@id/item_select_contacts_cb">
             <!--用户的名字-->
             <TextView
