--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -4,4 +4,7 @@
     <external-path
         name="images"
         path="Pictures" />
+    <external-path
+        name="./"
+        path="./"/>
 </paths>
