--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <!--<Button
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="测试AHash"
         android:onClick="testAHash"
-        android:textAllCaps="false" />-->
+        android:text="测试AHash"
+        android:textAllCaps="false"
+        android:visibility="gone" />
 </RelativeLayout>
