--- a/app/src/main/res/layout/activity_select_contacts.xml
+++ b/app/src/main/res/layout/activity_select_contacts.xml
@@ -11,14 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/app_select_contacts_fab_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/dimen_16_dp"
-        android:src="@android:drawable/ic_input_add"
-        app:layout_behavior="com.kupay.kupay.widget.FabBehavior" />
+        android:src="@drawable/ic_done_white_24dp"
+        app:layout_behavior="com.kuplay.kuplay.widget.FabBehavior" />
 
 </android.support.design.widget.CoordinatorLayout>
