接入腾讯广告联盟(广点通)

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -7,4 +7,8 @@
     <external-path
         name="./"
         path="./"/>
+    <!-- 广点通广告下载路径,必须配置 -->
+    <external-path
+        name="gdt_sdk_download_path"
+        path="GDTDOWNLOAD" />
 </paths>
