--- a/app/src/main/res/layout/activity_select_contacts.xml
+++ b/app/src/main/res/layout/activity_select_contacts.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.SelectContactsActivity">
+    tools:context=".adapter.SelectContactsActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/app_select_contacts_rv_contacts_list"
